@@ -2,7 +2,7 @@
 This project is a simple Docker image that provides access to the
 [Azul Systems JDK](http://www.azul.com/downloads/zulu/).  It is intended
 for **running** JVM applications, not building and testing them. If you
-need to build a JVM application, [look at this project](https://github.com/kurron/docker-azul-jdk-8-build).
+need to build a JVM application, [look at this project](https://github.com/kurron/docker-azul-jdk-11-build).
 
 
 # Prerequisites
@@ -31,7 +31,7 @@ to your image.
 
 The `Dockerfile`:
 ```
-FROM kurron/docker-azul-jdk-8:latest
+FROM kurron/docker-azul-jdk-11:latest
 
 MAINTAINER Ron Kurr <kurr@kurron.org>
 
@@ -45,48 +45,15 @@ USER microservice
 # Run the simple program
 ENTRYPOINT ["/home/microservice/launch-jvm.sh", "Hello"]
 ```
-The `Bash script` for a single core host:
+Example `Bash` script:
 ```
-#!/bin/bash
+#!/usr/bin/env  bash
 
 JVM_DNS_TTL=${1:-30}
 
 CMD="${JAVA_HOME}/bin/java \
     -server \
-    -XX:+UnlockExperimentalVMOptions \
-    -XX:+UseCGroupMemoryLimitForHeap \
-    -XX:+ScavengeBeforeFullGC \
-    -XX:+CMSScavengeBeforeRemark \
     -XX:+UseSerialGC \
-    -XX:MinHeapFreeRatio=20 \
-    -XX:MaxHeapFreeRatio=40 \
-    -XX:GCTimeRatio=4 \
-    -XX:AdaptiveSizePolicyWeight=90
-    -Dsun.net.inetaddr.ttl=${JVM_DNS_TTL} \
-    $*"
-
-echo ${CMD}
-exec ${CMD}
-```
-
-The `Bash script` for a multi-core host:
-```
-#!/bin/bash
-
-JVM_DNS_TTL=${1:-30}
-JVM_GC_THREADS=${2:-2}
-
-CMD="${JAVA_HOME}/bin/java \
-    -server \
-    -XX:+UnlockExperimentalVMOptions \
-    -XX:+UseCGroupMemoryLimitForHeap \
-    -XX:+ScavengeBeforeFullGC \
-    -XX:+CMSScavengeBeforeRemark \
-    -XX:ParallelGCThreads=${JVM_GC_THREADS} \
-    -XX:+UseConcMarkSweepGC \
-    -XX:+CMSParallelRemarkEnabled \
-    -XX:+UseCMSInitiatingOccupancyOnly \
-    -XX:CMSInitiatingOccupancyFraction=70 \
     -Dsun.net.inetaddr.ttl=${JVM_DNS_TTL} \
     $*"
 
@@ -101,23 +68,6 @@ You can control how much CPU and RAM the container see via Docker's
 `--cpus`, `--memory` and `--memory-swap` switches.
 
 ## Observed JVM Memory Behavior
-Using [VisualVM](https://visualvm.github.io/) I was able to watch the JVM's heap
-and have the following observations. Test were run with
-`OpenJDK Runtime Environment (Zulu 8.21.0.1-linux64) (build 1.8.0_131-b11)`.
-
-1. Docker's `--memory` switch sets the cgroup settings
-1. `exec` into a container and run `mount | grep cgroup | grep memory`, `more /sys/fs/cgroup/memory/memory.limit_in_bytes` to see the cgroup value
-1. JVM's `-XX:+UseCGroupMemoryLimitForHeap` only respects the cgroup settings when explicit settings are **not** provided
-1. setting `-Xms` and `-Xmx` can exceed the cgroup setting and what Docker thinks you are using for memory
-1. not specifing heap settings cause the JVM to allocate a much smaller heap, anecdotally about half of the Docker allocation
-
-Your situation will dictate what runtime switches to use. A scheduler, such as Kubernetes,
-will only understand the cgroup settings so you can either let the JVM figure out the heap
-based on what the scheduler assigns it or specify the heap settings explicitly.  If you
-specify the heap by hand and get it wrong by exceeding the amount of memory the scheduler
-thinks you want to use, you could cause an OOM situation with other containers.
-Eventually, the JVM will catch up with the container world but until that day, we'll have
-to manage memory settings very carefully.
 
 # Troubleshooting
 
@@ -125,6 +75,7 @@ to manage memory settings very carefully.
 This project is licensed under the
 [Apache License Version 2.0, January 2004](http://www.apache.org/licenses/).
 
+* [JVM Memory Settings in a Container Environment: The Bare Minimum You Should Know Before Going Live](https://medium.com/adorsys/jvm-memory-settings-in-a-container-environment-64b0840e1d9e)
 * [Guidance for Docker Image Authors](http://www.projectatomic.io/docs/docker-image-author-guidance/)
 * [Java RAM Usage in Containers: Top 5 Tips Not to Lose Your Memory](http://blog.jelastic.com/2017/04/13/java-ram-usage-in-containers-top-5-tips-not-to-lose-your-memory/)
 * [Java and Memory Limits in Containers: LXC, Docker and OpenVZ](http://blog.jelastic.com/2016/05/03/java-and-memory-limits-in-containers-lxc-docker-and-openvz/)
@@ -135,6 +86,4 @@ This project is licensed under the
 
 # List of Changes
 
-* removed Docker, Docker Compose and Ansible from the image. Use the build image instead.
-* use `azul/zulu-openjdk:8u131` as the base image to be more Kubernetes friendly
-* update to OpenJDK 64-Bit Server VM (Zulu 8.21.0.1-linux64) (build 25.131-b11, mixed mode)
+* initial release 
